--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="mediaqueries.css" />
   </head>
-  <body>
+  <body id="top">
     <nav id="desktop-nav">
       
       <div>
@@ -63,7 +63,7 @@
             src="./assets/linkedin.png"
             alt="My LinkedIn profile"
             class="icon"
-            onclick="location.href='https://www.linkedin.com/in/lucky-sibuyi-414ab5221//'"
+            onclick="location.href='https://www.linkedin.com/in/lucky-sibuyi-414ab5221/'"
           />
           <img
             src="./assets/github.png"
@@ -237,13 +237,19 @@
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Project One</h2>
+            <h2 class="experience-sub-title project-title">Profile Demo</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/LuckySibuyi/'"
+                onclick="location.href='https://github.com/LuckySibuyi/LuckySibuyi'"
               >
                 Github
+              </button>
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='https://luckysibuyi.github.io/LuckySibuyi/'"
+              >
+                Live Demo
               </button>
             </div>
           </div>
@@ -272,7 +278,7 @@
             alt="LinkedIn icon"
             class="icon contact-icon"
           />
-          <p><a href="https://github.com/LuckySibuyi/">LinkedIn</a></p>
+          <p><a href="https://www.linkedin.com/in/lucky-sibuyi-414ab5221/">LinkedIn</a></p>
         </div>
         <div class="contact-info-container">
           <img
@@ -288,7 +294,7 @@
       <nav>
         <div class="nav-links-container">
           <ul class="nav-links">
-            <li><a href="#profile">Back to top</a></li>
+            <li><a href="#top">Back to top</a></li>
           </ul>
         </div>
       </nav>
