--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/LuckySibuyi/LuckySibuyi'"
+                onclick="location.href='https://luckysibuyi.github.io/Demo/'"
               >
                 Github
               </button>
