--- a/index.html
+++ b/index.html
@@ -241,13 +241,13 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://luckysibuyi.github.io/Demo/'"
+                onclick="location.href='https://github.com/LuckySibuyi/Demo/'"
               >
                 Github
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://luckysibuyi.github.io/LuckySibuyi/'"
+                onclick="location.href='https://luckysibuyi.github.io/Demo/'"
               >
                 Live Demo
               </button>
