--- a/index.html
+++ b/index.html
@@ -290,6 +290,14 @@
         </div>
       </div>
     </section>
+
+    <div id="chat-container">
+        <div id="chat-window"></div>
+            <div id="input-container">
+              <input type="text" id="user-input" placeholder="Type your message...">
+              <button id="send-btn">Send</button>
+            </div>
+  </div>
     <footer>
       <nav>
         <div class="nav-links-container">
