--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>My Portfolio</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="mediaqueries.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" 
+        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" 
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
   </head>
   <body id="top">
     <nav id="desktop-nav">
@@ -290,6 +294,7 @@
         </div>
       </div>
     </section>
+
     <!-- Chatbot Toggle Button -->
   <button class="toggle-button" id="toggleButton"><i class="fa-solid fa-comment-dots"></i></button>
 
