Adding bot functionality and adding a back to top link

--- a/index.html
+++ b/index.html
@@ -303,8 +303,9 @@
     <div class="chat-header">
       <div class="title">
         <img src="bot.jpg" alt="avatar" id="avatar">
+        <button class="refBtn" id="refreshButton"><i class="fa fa-refresh"></i></button>
         <div>
-            <span style="color:lawngreen">online</span>
+          <span style="color:lawngreen">online</span>
         </div>
     </div>
       <button class="close-button" id="closeButton">&times;</button>
@@ -312,13 +313,12 @@
     <div class="container">
       <div class="chat" id="chat"></div>
       <div class="input-container">
-        
-        <button class="refBtn"><i class="fa fa-refresh" onclick="initChat()"></i></button>
         <input type="text" class="input" id="input" placeholder="Type your message here...." />
         <button class="button" id="button"><i class="fa-brands fa-telegram"></i></button>
       </div>
     </div>
   </div>
+
     <footer>
       <nav>
         <div class="nav-links-container">
