--- a/index.html
+++ b/index.html
@@ -320,13 +320,9 @@
   </div>
 
     <footer>
-      <nav>
-        <div class="nav-links-container">
-          <ul class="nav-links">
-            <li><a href="#top">Back to top</a></li>
-          </ul>
-        </div>
-      </nav>
+   
+      <a href="#top">Back to top</a>
+      
       <p>Copyright &#169; 2024 Lucky Sibuyi. All Rights Reserved.</p>
     </footer>
     <script src="script.js"></script>
