Adding nama and email to bot

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         </div>
       </div>
     </section>
-
+    <hr style="width:50%;margin-left:25% ;">
     <section id="about">
       <p class="section__text__p1">Get To Know More</p>
       <h1 class="title">About Me</h1>
@@ -318,11 +318,8 @@
       </div>
     </div>
   </div>
-
+  <a class="top" href="#top">Back to top</a>
     <footer>
-   
-      <a href="#top">Back to top</a>
-      
       <p>Copyright &#169; 2024 Lucky Sibuyi. All Rights Reserved.</p>
     </footer>
     <script src="script.js"></script>
