--- a/index.html
+++ b/index.html
@@ -244,17 +244,17 @@
             <h2 class="experience-sub-title project-title">Profile Demo</h2>
             <div class="btn-container">
               <button
-                class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/LuckySibuyi/Demo/'"
-              >
-                Github
-              </button>
-              <button
-                class="btn btn-color-2 project-btn"
-                onclick="location.href='https://luckysibuyi.github.io/Demo/'"
-              >
-                Live Demo
-              </button>
+                  class="btn btn-color-2 project-btn"
+                  onclick="window.open('https://github.com/LuckySibuyi/Demo/', '_blank', 'noopener,noreferrer')"
+                >
+                  GitHub
+                </button>
+                <button
+                  class="btn btn-color-2 project-btn"
+                  onclick="window.open('https://luckysibuyi.github.io/Demo/', '_blank', 'noopener,noreferrer')"
+                >
+                  Live Demo
+                </button>
             </div>
           </div>
           
