--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/snip.png"
+                src="./assets/snip.PNG"
                 alt="Project 1"
                 class="project-img"
               />
