Make logo into a link and add styling

--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
   </head>
   <body id="top">
     <nav id="desktop-nav">
-      <div class="logo">Lucky Sibuyi</div>
+      <div class="logo">
+        <a href="#">Lucky Sibuyi</a>
+      </div>
       <div>
         <ul class="nav-links">
           <li><a href="#about">About</a></li>
