--- a/index.html
+++ b/index.html
@@ -138,7 +138,11 @@
     </section>
     <section id="experience">
       <p class="section__text__p1">My</p>
-      <h1 class="title">Skills</h1>
+      <div class="position-relative d-flex align-items-center justify-content-center">
+        <h1 class="display-1 text-uppercase text-white" style="-webkit-text-stroke: 1px #dee2e6;">Skills</h1>
+        <h1 class="position-absolute text-uppercase text-primary">Skills</h1>
+    </div>
+
       <div class="experience-details-container">
         <div class="about-containers">
           <div class="details-container">
@@ -273,7 +277,10 @@
     
     <section id="projects">
       <p class="section__text__p1">Browse My Recent</p>
-      <h1 class="title">Projects</h1>
+      <div class="position-relative d-flex align-items-center justify-content-center">
+        <h1 class="display-1 text-uppercase text-white" style="-webkit-text-stroke: 1px #dee2e6;">Projects</h1>
+        <h1 class="position-absolute text-uppercase text-primary">Projects</h1>
+    </div>
       <div class="experience-details-container">
         <div class="about-containers">
           <div class="details-container color-container">
@@ -287,7 +294,7 @@
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Profile Demo</h2>
+            <h2 class="experience-sub-title project-title">Chatbot Demo</h2>
             <div class="btn-container">
               <button
                   class="btn btn-color-2 project-btn"
