--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
   </head>
   <body id="top">
     <nav id="desktop-nav">
-      <div class="logo">Lucky Sibuyi</div>
+      <div class="logo">
+        <a href="#">Lucky Sibuyi</a>
+      </div>
       <div>
         <ul class="nav-links">
           <li><a href="#about">About</a></li>
@@ -150,7 +152,7 @@
             <div class="article-container">
               <article>
                 <img
-                  src="./assets/checkmark.png"
+                  src="./assets/html.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -161,7 +163,7 @@
               </article>
               <article>
                 <img
-                  src="./assets/checkmark.png"
+                  src="./assets/css.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -173,7 +175,7 @@
 
               <article>
                 <img
-                  src="./assets/checkmark.png"
+                  src="./assets/bootstrap.jpeg"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -185,7 +187,7 @@
 
               <article>
                 <img
-                  src="./assets/checkmark.png"
+                  src="./assets/js.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -203,7 +205,7 @@
             <div class="article-container">
               <article>
                 <img
-                  src="./assets/checkmark.png"
+                  src="./assets/mysql.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -214,7 +216,7 @@
               </article>
               <article>
                 <img
-                  src="./assets/checkmark.png"
+                  src="./assets/php.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -225,7 +227,7 @@
               </article>
               <article>
                 <img
-                  src="./assets/checkmark.png"
+                  src="./assets/c++.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -237,7 +239,7 @@
 
               <article>
                 <img
-                  src="./assets/checkmark.png"
+                  src="./assets/csharp.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -249,7 +251,7 @@
 
               <article>
                 <img
-                  src="./assets/checkmark.png"
+                  src="./assets/java.png"
                   alt="Experience icon"
                   class="icon"
                 />
