--- a/index.html
+++ b/index.html
@@ -315,10 +315,10 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/project-1.png"
+                src="./assets/project-1.jpeg"
                 alt="Project 1"
                 class="project-img"
-                style="height: 180px; width: 210px;"
+                style="height: 180px; width: 280px;"
               />
             </div>
             <h2 class="experience-sub-title project-title">Profile Demo</h2>
