--- a/index.html
+++ b/index.html
@@ -162,6 +162,22 @@
                 </div>
               </article>
               <article>
+                <img src="./assets/React-icon.png" alt="React icon" class="icon" />
+                <div>
+                  <h3>React.js</h3>
+                  <p>Intermediate</p>
+                </div>
+              </article>
+
+              <article>
+                <img src="./assets/tailwind.svg" alt="Tailwind icon" class="icon" />
+                <div>
+                  <h3>Tailwind CSS</h3>
+                  <p>Intermediate</p>
+                </div>
+              </article>
+
+              <article>
                 <img
                   src="./assets/css.png"
                   alt="Experience icon"
@@ -225,6 +241,30 @@
                   <p>Intermediate</p>
                 </div>
               </article>
+              <article>
+                <img src="./assets/NET_Core_Logo.png" alt=".NET Core icon" class="icon" />
+                <div>
+                  <h3>.NET Core / .NET 8/9</h3>
+                  <p>Intermediate</p>
+                </div>
+              </article>
+
+              <article>
+                <img src="./assets/sql_server.png" alt="SQL Server icon" class="icon" />
+                <div>
+                  <h3>SQL Server</h3>
+                  <p>Experienced</p>
+                </div>
+              </article>
+
+              <article>
+                <img src="./assets/rest-api.png" alt="API icon" class="icon" />
+                <div>
+                  <h3>RESTful APIs</h3>
+                  <p>Experienced</p>
+                </div>
+              </article>
+
               <article>
                 <img
                   src="./assets/c++.png"
