--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     </section>
     <hr style="width:50%;margin-left:25% ;">
     <section id="about">
-      <p class="section__text__p1">Get To Know More</p>
+      <p class="section__text__p1">Get To Know Me</p>
      
       <div class="position-relative d-flex align-items-center justify-content-center">
         <h1 class="display-1 text-uppercase text-white" style="-webkit-text-stroke: 1px #dee2e6;">About</h1>
@@ -121,13 +121,16 @@
             </div>
           </div>
           <div class="text-container">
-            <p>
-              I hold a National Diploma in Information Technology, specializing in software development(NQF6) and a Natational 
-              Certificate in Systems Support(NQF5), with 2 years working experience as a Support Analyst. I have knowledge and 
-              experience in IT support, and a background in project management, database management and full-stack development. 
-              Skills include HTML, CSS, PHP and JavaScript. Well-versed in numerous programming languages and technologies 
-              including C++, C#, HTML, JAVA, PHP, JavaScript, CSS, SQL and Linux.</p>
-            </p>
+          <p>
+          I’m a Software Developer Intern with a National Diploma in Information Technology and hands-on experience in full-stack web development, IT support, and software testing. I specialize in building scalable applications using React, .NET Core, SQL Server, and Entity Framework. I'm also proficient in developing RESTful APIs, implementing JWT-based authentication, and following Agile methodologies.
+        </p>
+
+        <p>
+          I’m passionate about writing clean, maintainable code and applying modern DevOps practices such as CI/CD pipelines and cloud deployment. I enjoy solving real-world problems through software and constantly seek opportunities to learn, grow, and contribute to impactful projects.
+        </p>
+
+
+          
           </div>
         </div>
       </div>
@@ -139,7 +142,7 @@
       />
     </section>
     <section id="experience">
-      <p class="section__text__p1">My</p>
+      <p class="section__text__p1">My Skills</p>
       <div class="position-relative d-flex align-items-center justify-content-center">
         <h1 class="display-1 text-uppercase text-white" style="-webkit-text-stroke: 1px #dee2e6;">Skills</h1>
         <h1 class="position-absolute text-uppercase text-primary">Skills</h1>
